Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_group12-webapp.yml
+++ b/.github/workflows/main_group12-webapp.yml
@@ -51,7 +51,10 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -62,10 +65,17 @@ jobs:
         run: unzip release.zip
 
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_00BF49CDDE774395A36CB436E9B83657 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_BC44B69F1FCC41C6ACD2199A3FFDE19C }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B16ED0E88AD34EF69E9CA585AFF6771C }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'Group12-WebApp'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8EDD382A3E3F4C84BE465142153E8D0A }}
+          
